--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 # Note: Various modules refer to this system as "encoded", not "cgap-portal".
 name = "encoded"
-version = "15.5.0"
+version = "15.6.0"
 description = "Computational Genome Analysis Platform"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
@@ -49,11 +49,12 @@ codeguru-profiler-agent = "^1.2.4"
 # At least on Mac M1 if cryptography package is later than 39.x.x (i.e. 40.x.x and up)
 # we get odd 'pyo3_runtime.PanicException: Python API call failed' error on import
 # of cryptography.hazmat.bindings._rust in cryptography package. 2023-04-21.
-cryptography = "39.0.2"
+# cryptography = "39.0.2"
+cryptography = "^43.0.1"
 colorama = "0.3.3"
 dcicpyvcf = "^3.1.0"
 dcicsnovault = "^11.18.0"
-dcicutils = "^8.13.3"
+dcicutils = "^8.16.1"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
